--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           border-radius: 5px;
           max-width: 350px;
         }
-        .card h1,p,h2{
+        .card h1,p,h2,h3{
            color: white;
         }
         button{
@@ -67,6 +67,7 @@
                 let Button = document.createElement("button")
                 Button.setAttribute("aria-label", tip)
                 Button.setAttribute("data-balloon-pos", "up")
+                Button.setAttribute("onClick",Redirect(LinkHref))
                 Button.innerText = Name
                 Buttons.appendChild(Button)
                 Button.addEventListener("click", () => {
