--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <script>
         const Buttons = document.getElementById("Buttons")
-        const ButtonsArray = [["Products","/products","Find sofrware from 3D engines to JS librarys"],["Tools","/tools","Find useful tools that help you get stuff done"],["Databases","","Not public yet"]]
+        const ButtonsArray = [["Products","/products","Find sofrware from 3D engines to JS librarys"],["Tools","/tools","Find useful tools that help you get stuff done"],["Databases","","Not public yet"],["AI","/info.html","Not on website yet"]]
         function WriteGrid(){
             for (let index in ButtonsArray){
                 var object = ButtonsArray[index]
