--- a/examples/webcomment/source.html
+++ b/examples/webcomment/source.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1>Recently I have lost will to maintain both my webpage and webcomment, latest versions of webcomment are private for the time being</h1>
+    <p>...</p>
+  </body>
+</html>
