--- a/examples/webcomment/source.html
+++ b/examples/webcomment/source.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Recently I have lost will to maintain both my webpage and webcomment, latest versions of webcomment are private for the time being</h1>
-    <p>...</p>
+    <h1>Outdated</h1>
+    <p>This page is discontinued please visit: <a src="/static/repoloader/local.html?repo=webcomment">webcomment card</a></a></p>
   </body>
 </html>
