--- a/loader.html
+++ b/loader.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
   <h1>Link system discontinued</h1>
-  <h href="/products">Visit Products</h>
+  <h href="https://githuboauth.glitch.me/auth/github">For OAuth links</h>
 </html>
