--- a/loader.html
+++ b/loader.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <h1>Link system discontinued</h1>
+  <h1>Loader.html is discontinued</h1>
+  <p>Please select an option</p>
   <a href="https://githuboauth.glitch.me/auth/github">For OAuth links</a>
+  <a href="static/redirect/home.html">Home</a>
 </html>
