--- a/static/repoloader/loader.html
+++ b/static/repoloader/loader.html
@@ -21,7 +21,7 @@
         <p>Loading...</p>
     </div>
     <script type="module">
-        import loadAndRender from './loader.js';
+        import loadAndRender from 'static/repoloader/loader.js';
         loadAndRender();
     </script>
 </body>
