--- a/static/userloader/index.html
+++ b/static/userloader/index.html
@@ -6,7 +6,7 @@
     <title>GitHub User Profile</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="static/css/profile.css">
 </head>
 <body>
     <div class="container mt-5">
