--- a/static/userloader/index.html
+++ b/static/userloader/index.html
@@ -28,6 +28,6 @@
     </div>
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="static/js/profile.js"></script>
 </body>
 </html>
