--- a/v2/index.html
+++ b/v2/index.html
@@ -3,49 +3,10 @@
 <head>
     <title>connor_33341</title>
     <link rel="icon" href="/static/icons/mainicon.ico">
-    <link rel="stylesheet" href="/Assets/main.css">
+    <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
     <script src="/static/redirect.js"></script>
     <script src="/static/particles/particles.js"></script>
-    <style>
-        #particles-js{
-            width: 100vw;
-            height: 100vh;
-        }
-        body{
-            margin: 0px;
-            overflow: hidden;
-            background-color: #373955;
-        }
-        .card{
-          background-color:#0c0c0cef;
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%, -50%);
-          padding: 10px;
-          padding-top: 5px;
-          font-family: sans-serif;
-          text-align: center;
-          border-radius: 5px;
-          max-width: 350px;
-        }
-        .card h1,p,h2,h3{
-           color: white;
-        }
-        button{
-            border-radius: 2px;
-            border-style: solid;
-            border-color: white;
-			border-width: thin;
-			color: white;
-			padding: 2px;
-            background-color: black;
-        }
-		.card .Buttons{
-			padding: 10px;
-		}
-    </style>
 </head>
 <body>
     <div id="particles-js"></div>
