--- a/v2/index.html
+++ b/v2/index.html
@@ -14,7 +14,7 @@
         <h1>connor_33341</h1>
         <noscript><strong>This page requires Java Script, most function will not work</strong></noscript>
         <h2>I make random stuff</h2>
-	    <h3>Website Inactive <a href="info.html">Info</a></h3>
+	    <h3>Website Inactive <a href="/info.html">Info</a></h3>
         <div id="Buttons"></div>
     </div>
     <script>
