--- a/static/repoloader/loader.html
+++ b/static/repoloader/loader.html
@@ -37,10 +37,10 @@
             loading.innerText = states[index]
         }
         var interval = setInterval(switchstate, 500)
-        while (loaded != true){
-            console.log("loading")
-        }
-        clearInterval(interval)
+        //while (loaded != true){
+        //   console.log("loading")
+        //}
+        //clearInterval(interval)
     </script>
     <script type="module">
         import loadAndRender from 'static/repoloader/loader.js';
