--- a/static/repoloader/loader.html
+++ b/static/repoloader/loader.html
@@ -36,7 +36,7 @@
             }
             loading.innerText = states[index]
         }
-        var interval = setInterval(switchstate, 500)
+        //var interval = setInterval(switchstate, 500)
         //while (loaded != true){
         //   console.log("loading")
         //}
