--- a/static/repoloader/loader.html
+++ b/static/repoloader/loader.html
@@ -20,7 +20,7 @@
     <div id="content">
         <p id="loading">Loading...</p>
     </div>
-    <script>
+    <!--<script>
         const loading = document.getElementById("loading")
         const states = [
             "Loading...",
@@ -41,7 +41,7 @@
         //   console.log("loading")
         //}
         //clearInterval(interval)
-    </script>
+    </script> /-->
     <script type="module">
         import loadAndRender from 'static/repoloader/loader.js';
         loadAndRender();
