--- a/static/redirect/home.html
+++ b/static/redirect/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/basic.css">
+    <link rel="stylesheet" href="static/css/basic.css">
     <meta http-equiv="refresh" content="0; url=https://connor33341.github.io/v2">
     <title>Redirecting...</title>
 </head>
