--- a/static/virtualkeyboard/iframe/index.html
+++ b/static/virtualkeyboard/iframe/index.html
@@ -29,13 +29,7 @@
 
 <body>
 
-    <textarea name="anytext"
-
-        class="text-area use-keyboard-input"
-
-        placeholder="Click me!">
-
-    </textarea>
+    <iframe></iframe>
 
     <script src="script.js"></script>
 
