--- a/static/virtualkeyboard/iframe/index.html
+++ b/static/virtualkeyboard/iframe/index.html
@@ -29,7 +29,7 @@
 
 <body>
 
-    <iframe></iframe>
+    <iframe src="https://connor33341.github.io/static/virtualkeyboard"></iframe>
 
     <script src="script.js"></script>
 
