--- a/static/repoloader/loader.html
+++ b/static/repoloader/loader.html
@@ -47,7 +47,7 @@ setTimeout(() => {
 }, 5000); 
     </script>
     <script type="module">
-        import loadAndRender from 'static/repoloader/loader.js';
+        import loadAndRender from 'https://connor33341.github.io/static/repoloader/loader.js';
         loadAndRender();
     </script>
 </body>
