--- a/tools/simple/AeroVector.html
+++ b/tools/simple/AeroVector.html
@@ -15,7 +15,7 @@
         <noscript><strong>This page requires Java Script, most function will not work</strong></noscript>
         <h2>Installers</h2>
 	    <h3>Windows(x86): <a href="/installers/index.html?target=windows&source=https://raw.githubusercontent.com/connor33341/AeroVECTOR/master/installers/install.bat">Info</a></h3>
-        <h3>Linux: <a href="/installers/index.html?target=linux&source=https://raw.githubusercontent.com/connor33341/AeroVECTOR/master/installers/install.sh">Info</a></h3>
+        <h3>Linux: <a href="/installers/index.html?target=linux&source=https://raw.githubusercontent.com/connor33341/AeroVECTOR/master/installers/install.sh&force=false">Info</a></h3>
     </div>
     <script>
         particlesJS.load('particles-js', '/static/particles/particlesjs-config.json', function() {});
