Update with docs

--- a/tools/simple/AeroVector.html
+++ b/tools/simple/AeroVector.html
@@ -13,9 +13,17 @@
     <div class="card">
         <h1>CWAerospace-AeroVector</h1>
         <noscript><strong>This page requires Java Script, most function will not work</strong></noscript>
-        <h2>Installers</h2>
-	    <h3>Windows(x86): <a href="/installers/index.html?target=windows&source=https://raw.githubusercontent.com/connor33341/AeroVECTOR/master/installers/install.bat">Info</a></h3>
-        <h3>Linux: <a href="/installers/index.html?target=linux&source=https://raw.githubusercontent.com/connor33341/AeroVECTOR/master/installers/install.sh&force=false">Info</a></h3>
+        <h2>Installers:</h2>
+	    <h3>Windows(x86): <a href="/installers/index.html?target=windows&source=https://raw.githubusercontent.com/connor33341/AeroVECTOR/master/installers/install.bat">install.bat</a></h3>
+        <h3>Linux: <a href="/installers/index.html?target=linux&source=https://raw.githubusercontent.com/connor33341/AeroVECTOR/master/installers/install.sh&force=false">install.sh</a></h3>
+        <br>
+        <h2>Docs:</h2>
+        <h3>OrginalDoc: <a href="blob:https://github.com/774876d6-be81-4bc8-823e-ff482ffa8748">PDF</a></h3>
+        <br>
+        <h3>Compiled (Portable):</h3>
+        <h2>Windows(x86): <a>AeroVector.exe</a></h2>
+        <h2>Linux: Requires manual compiling</h2>
+        <h2>Mac(NOT SUPPORTED): Requires manual compiling</h2>
     </div>
     <script>
         particlesJS.load('particles-js', '/static/particles/particlesjs-config.json', function() {});
