--- a/ai/pfp.html
+++ b/ai/pfp.html
@@ -72,33 +72,81 @@
             </div>
             <div class="col-sm-8">
                 <h2>Genarator</h2>
-                <h5>SDXL3M-Finetuned <span class="badge bg-dark">2x NVIDIA A100</span><span class="badge bg-success">Running</span></h5>
+                <h5>SDXL3M-Finetuned <span class="badge bg-dark">2x NVIDIA A100</span><span
+                        class="badge bg-success">Running</span></h5>
                 <div class="fakeimg">
                     <img src="about:blank" style="height: 100%;width: 100%;" id="img1">
                 </div>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%" id="prog1"></div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%" id="prog1">
+                    </div>
                 </div>
                 <br>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco.</p>
+                <p>Some Text Here lol</p>
+                <div class="mb-3 mt-3">
+                    <label for="text" class="form-label">Prompt:</label>
+                    <input type="text" class="form-control" id="prompt1" placeholder="Enter Prompt" name="prompt1">
+                </div>
+                <div class="mb-3 mt-3">
+                    <label for="text" class="form-label">Seed:</label>
+                    <input type="text" class="form-control" id="seed1" placeholder="Enter Seed" name="seed1">
+                </div>
+                <div class="form-check mb-3">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" name="random1" id="random1"> Random Seed
+                    </label>
+                </div>
+                <br>
                 <button class="btn btn-primary" id="btn1">
-                    <span class="spinner-border spinner-border-sm" id="spin1"></span>
-                    Loading..
+                    <span class="spinner-border spinner-border-sm" id="spin1" hidden="true"></span>
+                    Save
                 </button>
-
                 <h2 class="mt-5">Variations</h2>
-                <h5>SDXL2M-Finetuned-Img2Img <span class="badge bg-dark">1x Google TPU</span><span class="badge bg-warning">Waiting in hardware Queue</span></h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco.</p>
+                <h5>SDXL2M-Finetuned-Img2Img <span class="badge bg-dark">1x Google TPU</span><span
+                        class="badge bg-warning">Waiting in hardware Queue</span></h5>
+                <div class="fakeimg">
+                    <img src="about:blank" style="height: 100%;width: 100%;" id="img1">
+                </div>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%" id="prog1">
+                    </div>
+                </div>
+                <br>
+                <p>Some Text Here lol</p>
+                <div class="mb-3 mt-3">
+                    <label for="text" class="form-label">Prompt:</label>
+                    <input type="text" class="form-control" id="prompt1" placeholder="Enter Prompt" name="prompt1">
+                </div>
+                <div class="mb-3 mt-3">
+                    <label for="text" class="form-label">Seed:</label>
+                    <input type="text" class="form-control" id="seed1" placeholder="Enter Seed" name="seed1">
+                </div>
+                <div class="form-check mb-3">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" name="random1" id="random1"> Random Seed
+                    </label>
+                </div>
+                <br>
+                <button class="btn btn-primary" id="btn1">
+                    <span class="spinner-border spinner-border-sm" id="spin1" hidden="true"></span>
+                    Save
+                </button>
+                <br>
             </div>
         </div>
     </div>
-
+    <!--Very bad method-->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="mt-5 p-4 bg-dark text-white text-center">
         <p>connor33341 2024</p>
     </div>
