--- a/ai/pfp.html
+++ b/ai/pfp.html
@@ -99,6 +99,10 @@
                 <br>
                 <button class="btn btn-primary" id="btn1">
                     <span class="spinner-border spinner-border-sm" id="spin1" hidden="true"></span>
+                    Generate
+                </button>
+                <button class="btn btn-primary" id="save1">
+                    <span class="spinner-border spinner-border-sm" id="spinsave1" hidden="true"></span>
                     Save
                 </button>
                 <h2 class="mt-5">Variations</h2>
@@ -147,10 +151,17 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="mt-5 p-4 bg-dark text-white text-center">
         <p>connor33341 2024</p>
     </div>
-
+    <script type="module">
+        import {Init} from "./main.js"
+        Init()
+    </script>
 </body>
 
 </html>
