--- a/ai/pfp.html
+++ b/ai/pfp.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/@gradio/client/dist/index.min.js"></script>-->
     <style>
         .fakeimg {
             height: 31.4%;
@@ -78,7 +79,7 @@
                     <img src="about:blank" style="height: 100%;width: 100%;" id="img1">
                 </div>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%" id="prog1">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:0%" id="prog1">
                     </div>
                 </div>
                 <br>
@@ -101,29 +102,37 @@
                     <span class="spinner-border spinner-border-sm" id="spin1" hidden="true"></span>
                     Generate
                 </button>
-                <button class="btn btn-primary" id="save1">
+                <button class="btn btn-secondary" id="save1">
                     <span class="spinner-border spinner-border-sm" id="spinsave1" hidden="true"></span>
                     Save
+                </button>
+                <button class="btn btn-secondary" id="load1">
+                    <span class="spinner-border spinner-border-sm" id="spinsave1" hidden="true"></span>
+                    Load
+                </button>
+                <button class="btn btn-danger" id="remove1">
+                    <span class="spinner-border spinner-border-sm" id="spinsave1" hidden="true"></span>
+                    Remove
                 </button>
                 <h2 class="mt-5">Variations</h2>
                 <h5>SDXL2M-Finetuned-Img2Img <span class="badge bg-dark">1x Google TPU</span><span
                         class="badge bg-warning">Waiting in hardware Queue</span></h5>
                 <div class="fakeimg">
-                    <img src="about:blank" style="height: 100%;width: 100%;" id="img1">
+                    <img src="about:blank" style="height: 100%;width: 100%;" id="img2">
                 </div>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%" id="prog1">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:0%" id="prog2">
                     </div>
                 </div>
                 <br>
                 <p>Some Text Here lol</p>
                 <div class="mb-3 mt-3">
                     <label for="text" class="form-label">Prompt:</label>
-                    <input type="text" class="form-control" id="prompt1" placeholder="Enter Prompt" name="prompt1">
+                    <input type="text" class="form-control" id="prompt2" placeholder="Enter Prompt" name="prompt1">
                 </div>
                 <div class="mb-3 mt-3">
                     <label for="text" class="form-label">Seed:</label>
-                    <input type="text" class="form-control" id="seed1" placeholder="Enter Seed" name="seed1">
+                    <input type="text" class="form-control" id="seed2" placeholder="Enter Seed" name="seed1">
                 </div>
                 <div class="form-check mb-3">
                     <label class="form-check-label">
@@ -155,11 +164,80 @@
     <br>
     <br>
     <br>
+    <!--Submit a Pull Request if you have a better method of keeping the footer at the bottom-->
     <div class="mt-5 p-4 bg-dark text-white text-center">
         <p>connor33341 2024</p>
     </div>
     <script type="module">
-        import {Init} from "./main.js"
+        const NegativePrompt = ""
+        let ImageUrl = ""
+        import { Client } from "https://cdn.jsdelivr.net/npm/@gradio/client/dist/index.min.js";
+        const TextToImageClient = await Client.connect("stabilityai/stable-diffusion-3-medium");
+        const TextToImageControls = {
+            EImage: document.getElementById("img1"),
+            EProg: document.getElementById("prog1"),
+            EPrompt: document.getElementById("prompt1"),
+            ESeed: document.getElementById("seed1"),
+            ERandom: document.getElementById("random1"),
+            EGenerate: document.getElementById("btn1"),
+            ESave: document.getElementById("save1"),
+            ELoad: document.getElementById("load1"),
+            ERemove: document.getElementById("remove1"),
+        }
+        function Delay(ms) {
+            return new Promise(resolve =>
+                setTimeout(resolve, ms)
+            )
+        }
+        function GenerateData() {
+            var Data = {
+                prompt: TextToImageControls.EPrompt.value,
+                seed: TextToImageControls.ESeed.value,
+                random: TextToImageControls.ERandom.checked
+            }
+            return Data
+        }
+        TextToImageControls.EGenerate.addEventListener("click", async () => {
+            TextToImageControls.EProg.style = "width:24%;"
+            await Delay(2000)
+            var Data = GenerateData()
+            TextToImageControls.EProg.style = "width:45%;"
+            let Seed = Data.seed
+            if (Data.random){
+                Seed = 0
+            }
+            const Result = await TextToImageClient.predict("/infer", {
+                prompt: Data.prompt,
+                negative_prompt: NegativePrompt,
+                seed: Seed,
+                randomize_seed: Data.random,
+                width: 1024,
+                height: 1024,
+                guidance_scale: 5,
+                num_inference_steps: 28,
+            });
+            ImageUrl = Result["data"][0]["url"]
+            console.log(ImageUrl)
+            TextToImageControls.EProg.style = "width:80%;"
+            await Delay(3000)
+            TextToImageControls.EProg.style = "width:100%;"
+            TextToImageControls.EImage.src = ImageUrl
+        })
+        TextToImageControls.ESave.addEventListener("click", () => {
+            var Data = GenerateData()
+            for (let i in Data) {
+                var v = Data[i]
+                localStorage.setItem(i, v)
+            }
+        })
+        TextToImageControls.ELoad.addEventListener("click", () => {
+            TextToImageControls.EPrompt.value = localStorage.getItem("prompt")
+            TextToImageControls.ESeed.value = localStorage.getItem("seed")
+            TextToImageControls.ERandom.checked = localStorage.getItem("random")
+        })
+    </script>
+    <script type="module">
+        import { Init } from "./main.js"
         Init()
     </script>
 </body>
