--- a/ai/pfp.html
+++ b/ai/pfp.html
@@ -314,8 +314,17 @@
             } catch {
                 console.log(Result)
                 console.log(Debug)
+                alert("An error has occoured")
                 AlertBox.hidden = false
-            }
+            } /*
+            if (Result["type"] == "status"){
+                var Message = Result["message"]
+                if (Message){
+                    alert(Message)
+                } else {
+                    alert("An error has occoured")
+                }
+            }*/
             ImageUrl = Result["data"][0]["url"]
             //console.log(Result)
             console.log(ImageUrl)
@@ -369,7 +378,7 @@
             //const testimg = await testimga.blob()
             //console.log(Data.prompt)
             //console.log(Data2.prompt2)
-            //console.log(Number(Seed))
+            console.log(Number(Seed))
             const Result = await ImageToImageClient.predict("/main_pipeline", {
                 input_image: ImageData,
                 src_prompt: Data.prompt,
@@ -377,6 +386,14 @@
                 seed: Seed,
                 w1: W
             })
+            if (Result["type"] == "status"){
+                var Message = Result["message"]
+                if (Message){
+                    alert(Message)
+                } else {
+                    alert("An error has occoured")
+                }
+            }
             ImageUrl = Result["data"][0]["url"]
             console.log(Result)
             ImageToImageControls.EProg.style = "width:80%;"
